# RCSB_UTILS_TARGETS HISTORY
   7-Nov-2020  - V0.11 Created module
  12-Nov-2020  - V0.12 Add consolidation of DrugBank target FASTA files
  24-Nov-2020  - V0.13 Add ChEMBLTargetProvider() and tests
  28-Nov-2020  - V0.14 Add CARDTargetProvider() and tests
  30-Nov-2020  - V0.15 Add SAbDabTargetProvider() and tests
   1-Dec-2020  - V0.16 Connect to UniProtIdMappingProvider() and add tagged fasta comment output.
   2-Dec-2020  - V0.17 Migrate molecule based ChEMBL methods to rcsb.utils.chemref.ChEMBLProvider()
   6-Dec-2020  - V0.18 Expose an exportFasta() method in each provider and add taxon output file options
  13-Dec-2020  - V0.19 Make Pharos sql restore a shell process.
  14-Dec-2020  - V0.20 Suppress stderr in the export of mysql table data.
  13-May-2021  - V0.21 Additional caching and stashing functions for all providers
  12-Jun-2021  - V0.22 Adding SAbDabTargetFeatureProvider() and CARDTargetFeatureProvider() modules
  13-Jun-2021  - V0.23 Move features to separate paths in CARDTargetFeatureProvider() and SAbDabTargetFeatureProvider()
