@@ -12,4 +12,5 @@
   13-May-2021  - V0.21 Additional caching and stashing functions for all providers
   12-Jun-2021  - V0.22 Adding SAbDabTargetFeatureProvider() and CARDTargetFeatureProvider() modules
   13-Jun-2021  - V0.23 Move features to separate paths in CARDTargetFeatureProvider() and SAbDabTargetFeatureProvider()
+  13-Jun-2021  - V0.24 Add feature identifiers to the outputs of CARDTargetFeatureProvider() and SAbDabTargetFeatureProvider()
 
